Bug fixes
Scrollbar instant search + corrected invert css variable value on first load

--- a/css/style.css
+++ b/css/style.css
@@ -1176,7 +1176,8 @@ body.satExtension .pulseAnimate {
   height: fit-content;
   max-height: 90vh;
   min-height: 30vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   text-align: center;
 }
 
